Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -131,3 +131,12 @@
 #### DONE Review pricing and number of courses
 
 
+### [[Crashboards International]] PITCH REVIEW\
+## [[Crashboards International]] PITCH REVIEW
+## [[Crashboards International]] PITCH REVIEW
+## 
+### 
+## [[Extended Essay]] call review with [[Srivalli Maam]]
+## 
+### 
+### There has been consistent delays in her meeting. This is not really what I aimed for, but, there is nothing that I can actually do.
