--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -139,4 +139,12 @@
 ## [[Extended Essay]] call review with [[Srivalli Maam]]
 ## 
 ### 
+### There has been consistent delays in her meeti
 ### There has been consistent delays in her meeting. This is not really what I aimed for, but, there is nothing that I can actually do.
+### Stuff to-do
+#### TODO Difference between EE and IA
+#### TODO Flesh out protocol in greater detail
+ [[Srivalli Maam]] comes online
+
+### DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
+
