Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -136,8 +136,9 @@
 ## [[Crashboards International]] PITCH REVIEW
 ## 
 ### 
-## [[Extended Essay]] call review with [[Srivalli Maam]]
-## 
+## [[Extended Essay]] call review with [[Srivalli Maa
+### So basically nothing happened today. There was no meeting, and I have lost complete faith in this bloody company by the name of Waxdale Ecosystem. My team has scoured the internet, but these people seem to be newbies and people who need to respect some time.
+# 
 ### 
 ### There has been consistent delays in her meeti
 ### There has been consistent delays in her meeting. This is not really what I aimed for, but, there is nothing that I can actually do.
