Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -149,3 +149,16 @@
 
 ### DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
 
+## logdaily
+## 
+## Your daily reminder - Don't ignore your dreams; work as hard you
+## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
+## [[Morning Pages]]
+## [[Create]]
+### TODO Read some [[Book - Rich Dad Poor Dad]]
+### TODO Add [[Book - Dongri to Dubai]] into #TBR + fill out details
+## [[Connect]]
+## [[Consume]]
+## [[Cerebrate]]
+## [[Coordinate]]
+## [[Consolidate]]
