Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -156,7 +156,7 @@
 ## [[Morning Pages]]
 ## [[Create]]
 ### TODO Read some [[Book - Rich Dad Poor Dad]]
-### TODO Add [[Book - Dongri to Dubai]] into #TBR + fill out details
+### TODO Add [[Book - Dongri to Dubai]] into #TBR + [[Book Notes]] + fill out details
 ## [[Connect]]
 ## [[Consume]]
 ## [[Cerebrate]]
