Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -43,7 +43,8 @@
 ### Read [[The power of the weekly review - Ali Abdaal]]
 ## [[Connect]]
 ## [[Consume]]
-### TODO Chemistry Acids and Bases
+### DONE Chemistry Acids and Bases
+
 ### Continued to take notes [[Book - Rich Dad Poor Dad]]
 ### Had some crazy methi malai matar kindly made by [[Mom]], lol! #foodie
 ## [[Cerebrate]]
