Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -160,7 +160,9 @@
 ### DONE Add [[Book - Dongri to Dubai]] into #TBR + [[Book Notes]] + fill out details
 
 ## [[Connect]]
-## [[Consume]]
+## [[Consume
 ## [[Cerebrate]]
+### Review [[Extended Essay]] 
+]]
 ## [[Coordinate]]
 ## [[Consolidate]]
