Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -164,5 +164,19 @@
 ## [[Cerebrate]]
 ### Review [[Extended Essay]] 
 ]]
-## [[Coordinate]]
+## [[Coordinate
 ## [[Consolidate]]
+## **Math Paper**
+### Entire syllabus will NOT come
+### 2 1 hour papers for 55 marks each
+### Paper 1 - 5/6/7 mark questions
+### Paper 2 - minimum 3 question for around15 marks
+### **Syllabus**
+#### Numbers - sequences and series
+#### Financial Maths
+#### Calculus - Integration and differentiation
+#### Complex numbers
+##### Graphs will be taught later
+#### Function related modelling - exponents, logs, trigonometric modelling (sinusoidal modelling)
+#### Distributions - All 3
+]]
