Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -166,17 +166,28 @@
 ]]
 ## [[Coordinate
 ## [[Consolidate]]
-## **Math Paper**
-### Entire syllabus will NOT come
-### 2 1 hour papers for 55 marks each
-### Paper 1 - 5/6/7 mark questions
-### Paper 2 - minimum 3 question for around15 marks
-### **Syllabus**
-#### Numbers - sequences and series
-#### Financial Maths
-#### Calculus - Integration and differentiation
-#### Complex numbers
-##### Graphs will be taught later
-#### Function related modelling - exponents, logs, trigonometric modelling (sinusoidal modelling)
-#### Distributions - All 3
+## [[Semester 1 Dates]]
+### **Math Paper**
+#### Entire syllabus will NOT come
+#### 2 1 hour papers for 55 marks each
+#### Paper 1 - 5/6/7 mark questions
+#### Paper 2 - minimum 3 question for around15 marks
+#### **Syllabus**
+##### Numbers - sequences and series
+##### Financial Maths
+##### Calculus - Integration and differentiation
+##### Complex numbers
+###### Graphs will be taught later
+##### Function related modelling - exponents, logs, trigonometric modelling (sinusoidal modelling)
+##### Distributions - All 3
+### Biology
+### P1 +P2 -> 1.5 hours, 10 or so MCQ's, 50 marks
+### P3 -> 1 hours, 30 marks
+### 3
+### 6.6
+### 7
+### 8
+### 11
+### 10.1
+### Option D
 ]]
