Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -181,12 +181,12 @@
 ##### Function related modelling - exponents, logs, trigonometric modelling (sinusoidal modelling)
 ##### Distributions - All 3
 ### Biology
-### P1 +P2 -> 1.5 hours, 10 or so MCQ's, 50 marks
-### P3 -> 1 hours, 30 marks
-### 3
-### 6.6
-### 7
-### 8
+#### P1 +P2 -> 1.5 hours, 10 or so MCQ's, 50 marks
+#### P3 -> 1 hours, 30 marks
+#### 3
+#### 6.6
+#### 7
+#### 8
 ### 11
 ### 10.1
 ### Option D
