Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -70,9 +70,32 @@
 ### [[Aug 24th, 2020]] 1 week to Chemistry
 ### [[Aug 27th, 2020]] 1 week to Economics
 ### [[Aug 31st, 2020]] 1 Week to Maths
+#### Entire syllabus will NOT come
+#### 2 1 hour papers for 55 marks each
+#### Paper 1 - 5/6/7 mark questions
+#### Paper 2 - minimum 3 question for around15 marks
+#### **Syllabus**
+###### Numbers - sequences and series
+###### Financial Maths
+###### Calculus - Integration and differentiation
+###### Complex numbers
+####### Graphs will be taught later
+###### Function related modelling - exponents, logs, trigonometric modelling (sinusoidal modelling)
+###### Distributions - All 3
 ### [[Sep 2nd, 2020]] 1 Week to English
 ### [[Sep 4th, 2020]] 1 Week to Biology
+#### P1 +P2 -> 1.5 hours, 10 or so MCQ's, 50 marks
+#### P3 -> 1 hours, 30 marks
+#### **Syllabus**
+##### 3
+##### 6.6
+##### 7
+##### 8
+##### 11
+##### 10.1
+##### Option D
 ### [[Sep 10th, 2020]] 1 Week to Hindi
+## 
 # Aug 3rd, 2020
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
@@ -165,29 +188,6 @@
 ### Review [[Extended Essay]] 
 ]]
 ## [[Coordinate
-## [[Consolidate]]
-## [[Semester 1 Dates]]
-### **Math Paper**
-#### Entire syllabus will NOT come
-#### 2 1 hour papers for 55 marks each
-#### Paper 1 - 5/6/7 mark questions
-#### Paper 2 - minimum 3 question for around15 marks
-#### **Syllabus**
-##### Numbers - sequences and series
-##### Financial Maths
-##### Calculus - Integration and differentiation
-##### Complex numbers
-###### Graphs will be taught later
-##### Function related modelling - exponents, logs, trigonometric modelling (sinusoidal modelling)
-##### Distributions - All 3
-### Biology
-#### P1 +P2 -> 1.5 hours, 10 or so MCQ's, 50 marks
-#### P3 -> 1 hours, 30 marks
-#### 3
-#### 6.6
-#### 7
-#### 8
-### 11
-### 10.1
-### Option D
+## [[Consolidate]
+# Option D
 ]]
