Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -50,6 +50,8 @@
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ### Clear or all acid and base doubts with [[Latha Ma'am]] on [[Aug 6th, 2020]] when we have class. The file is named "CONFUSION".
+#### 864 5635 7989
+#### 406128
 ## [[Consolidate]]
 ## Timestamps
 ### 4:10 - wake up
@@ -187,6 +189,7 @@
 ### TODO Read some [[Book - Rich Dad Poor Dad
 ### DONE Add [[Book - Dongri to Dubai]] into #TBR + [[Book Notes]] + fill out details
 ### Did some work on the [[YouTube Dashboard]]
+### Read a really interesting piece: [[Loneliness, social isolation, cardiovascular disease and mortality]]
 s
 
 ## [[Connect]]
