Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -183,7 +183,7 @@
 ### There have been constant delays in the [[CrashBoards x Waxdale Pitch]]. Sometimes they are giving us excuses of "forgetting" followed by a very interesting "technical error", WOW! Give these guys a script, they are ment to be on stage.
 ### There were two funny incidence that happened because of this. One involves [[Mom]] and the other involves [[Adithya]].
 ### Mom said that "now you know how tough challenges come by". This statement was something that I realised that even [[Dad]] might be going through. Maybe the jab (x25) hook thing is not only applicable in the startup world but is something that is applicable to #life
-### 
+### [[Mom]] Also pointed out one more thing. I say "um" before every sentenc 
 ]]
 ## [[Create]]
 ### TODO Read some [[Book - Rich Dad Poor Dad
