Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -141,8 +141,9 @@
 ### 8:00 to 9:00 - Economics 14 + breakfa
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy
 ## [[Crashboards International]] Start-up Pitch Review
-### The fucking show din't even happen. Those fucker who put some understanding up their arses din' t even show up; those motherfuckers.
-### Quite surprisingly they did reply. I want to put in the entire email once it comes it from [[Adithya]] 
+### The fucking 
+### The fucking show didn't even happen. Those fucker who put some understanding up their arses din' t even show up; those motherfuckers.
+singly they did reply. I want to put in the entire email once it comes it from [[Adithya]] 
 ## [[Create]]
 ### DONE Finish leftover task
 ### DONE Finalise the CrashBoards speech for [[Adithya]]
