--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -190,7 +190,7 @@ singly they did reply. I want to put in the entire email once it comes it from [
 ### TODO Read some [[Book - Rich Dad Poor Dad
 ### DONE Add [[Book - Dongri to Dubai]] into #TBR + [[Book Notes]] + fill out details
 ### Did some work on the [[YouTube Dashboard]]
-### Read a really interesting piece: [[Loneliness, social isolation, cardiovascular disease and mortality]]
+### Read a really interesting piece: [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
 s
 
 ## [[Connect]]
