Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -141,7 +141,6 @@
 ### 8:00 to 9:00 - Economics 14 + breakfa
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy
 ## [[Crashboards International]] Start-up Pitch Review
-### The fucking 
 ### The fucking show didn't even happen. Those fucker who put some understanding up their arses din' t even show up; those motherfuckers.
 singly they did reply. I want to put in the entire email once it comes it from [[Adithya]] 
 ## [[Create]]
@@ -163,11 +162,8 @@ singly they did reply. I want to put in the entire email once it comes it from [
 ## [[Crashboards International]] PITCH REVIEW
 ## 
 ### 
-## [[Extended Essay]] call review with [[Srivalli Maa
+## [[Extended Essay]] call review with [[Srivalli Maam]]
 ### So basically nothing happened today. There was no meeting, and I have lost complete faith in this bloody company by the name of Waxdale Ecosystem. My team has scoured the internet, but these people seem to be newbies and people who need to respect some time.
-# 
-### 
-### There has been consistent delays in her meeti
 ### There has been consistent delays in her meeting. This is not really what I aimed for, but, there is nothing that I can actually do.
 ### Stuff to-do
 #### TODO Difference between EE and IA
@@ -198,7 +194,6 @@ s
 ## [[Cerebrate]]
 ### Review [[Extended Essay]] 
 ]]
-## [[Coordinate
 ## [[Consolidate]
 # Option D
 ]]
