--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -7,7 +7,8 @@ tags:
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
 ## [[Create]]
-### TODO Procedure
+### TODO Procedure finalisation
+### TODO **IMP**: Find the difference between IA and EE
 ## [[Connect]]
 ## [[Consume]]
 ## [[Cerebrate]]
