Logseq auto save

--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -8,9 +8,10 @@ tags:
 ## [[Morning Pages]]
 ## [[Create]]
 ### TODO Procedure finalisation
-### TODO **IMP**: Find the difference between IA and EE
 ## [[Connect]]
+### [[TOK]] Meeting with [[Aadit]] at 7pm
 ## [[Consume]]
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
+## [[TODO]]
