--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -182,7 +182,7 @@ singly they did reply. I want to put in the entire email once it comes it from [
 ### Mom said that "now you know how tough challenges come by". This statement was something that I realised that even [[Dad]] might be going through. Maybe the jab (x25) hook thing is not only applicable in the startup world but is something that is applicable to #life
 ### [[Mom]] Also pointed out one more thing. I say "um" before every sentence.
 ## [[Create]]
-### TODO Read some [[Book - Rich Dad Poor Dad
+### TODO Read some [[Book - Rich Dad Poor Dad]]
 ### DONE Add [[Book - Dongri to Dubai]] into #TBR + [[Book Notes]] + fill out details
 ### Did some work on the [[YouTube Dashboard]]
 ### Read a really interesting piece: [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
