Logseq auto save

--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -6,6 +6,7 @@ tags:
 ## 
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
+###
 ## [[Create]]
 ### TODO Procedure finalisation
 ## [[Connect]]
@@ -14,4 +15,7 @@ tags:
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
-## [[TODO]]
+## TIMESTAMPS
+### 7:00 - Wakeup
+### Till 7:45 - Clean up desk, set up daily reviews page + found out enzyme for extended essay
+### 7:45 to - Biology chapter 3
