--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -8,9 +8,10 @@ tags:
 ## [[Morning Pages]]
 ###
 ## [[Create]]
-### TODO Procedure finalisation
+### TODO [[Extended Essay]] Procedure finalisation
+### TODO Complete [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
 ## [[Connect]]
-### [[TOK]] Meeting with [[Aadit]] at 7pm
+### [[TOK]] Meeting with [[Aadit]] at 7pm [[Aug 7th, 2020]]
 ## [[Consume]]
 ## [[Cerebrate]]
 ## [[Coordinate]]
@@ -19,3 +20,4 @@ tags:
 ### 7:00 - Wakeup
 ### Till 7:45 - Clean up desk, set up daily reviews page + found out enzyme for extended essay
 ### 7:45 to - Biology chapter 3
+
