Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -167,9 +167,8 @@ singly they did reply. I want to put in the entire email once it comes it from [
 ### There has been consistent delays in her meeting. This is not really what I aimed for, but, there is nothing that I can actually do.
 ### Stuff to-do
 #### TODO Difference between EE and IA [[Aug 7th, 2020]]
-#### TODO Flesh out protocol in greater detail
+#### DONE Flesh out protocol in greater detail
  [[Srivalli Maam]] comes online
-
 ### DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
 
 ##
