--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -166,9 +166,8 @@ singly they did reply. I want to put in the entire email once it comes it from [
 ### So basically nothing happened today. There was no meeting, and I have lost complete faith in this bloody company by the name of Waxdale Ecosystem. My team has scoured the internet, but these people seem to be newbies and people who need to respect some time.
 ### There has been consistent delays in her meeting. This is not really what I aimed for, but, there is nothing that I can actually do.
 ### Stuff to-do
-#### TODO Difference between EE and IA [[Aug 7th, 2020]]
-#### DONE Flesh out protocol in greater detail
- [[Srivalli Maam]] comes online
+#### DONE Difference between EE and IA [[Aug 7th, 2020]]
+#### DONE Flesh out protocol in greater detail before  [[Srivalli Maam]] comes online
 ### DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
 
 ##
