Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -104,7 +104,7 @@
 ## [[Create]]
 ### Noting [[Meeting Id's]]
 ### DONE #DIGEST [[ARTICLE - COVID-19: Emerging and Future Challenges for Dental and Oral Medicine]]
-### TODO #DIGEST [[VIDEO - Ninja Nerd Lectures COVID-19 April Update]]
+### DONE #DIGEST [[VIDEO - Ninja Nerd Lectures COVID-19 April Update]]
 ## [[Connect]]
 ### Rakshabandhan Messages
    :PROPERTIES:
@@ -169,7 +169,6 @@ singly they did reply. I want to put in the entire email once it comes it from [
 #### DONE Difference between EE and IA [[Aug 7th, 2020]]
 #### DONE Flesh out protocol in greater detail before  [[Srivalli Maam]] comes online
 ### DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
-
 ##
 ##
 ##
