--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -16,6 +16,7 @@ tags:
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
+## [[TODO]]
 ## TIMESTAMPS
 ### 7:00 - Wakeup
 ### Till 7:45 - Clean up desk, set up daily reviews page + found out enzyme for extended essay
