Logseq auto save

--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -19,5 +19,4 @@ tags:
 ## TIMESTAMPS
 ### 7:00 - Wakeup
 ### Till 7:45 - Clean up desk, set up daily reviews page + found out enzyme for extended essay
-### 7:45 to - Biology chapter 3
-
+### 7:45 to someplace around 8:30 - Biology chapter 3
