--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -10,8 +10,10 @@ tags:
 ## [[Create]]
 ### TODO [[Extended Essay]] Procedure finalisation
 ### TODO Complete [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
+### Made [[School Notes]]
 ## [[Connect]]
 ### [[TOK]] Meeting with [[Aadit]] at 7pm [[Aug 7th, 2020]]
+### [[Supriyo Uncle]] class [[Aug 8th, 2020]] at 7am
 ## [[Consume]]
 ## [[Cerebrate]]
 ## [[Coordinate]]
