Logseq auto save

--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -7,8 +7,8 @@ tags:
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
 ## [[Create]]
-### TODO [[Extended Essay]] Procedure finalisation
-### TODO Complete [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
+### TODO [[Extended Essay]] work
+### DONE Complete [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
 ### Made [[School Notes]]
 ## [[Connect]]
 ### [[TOK]] Meeting with [[Aadit]] at 7pm [[Aug 7th, 2020]]
