--- a/pages/aug_7th,_2020.md
+++ b/pages/aug_7th,_2020.md
@@ -10,9 +10,10 @@ tags:
 ### TODO [[Extended Essay]] work
 ### DONE Complete [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
 ### Made [[School Notes]]
+### [[TOK]] meeting with [[Aadit]] [[Aug 8th, 2020]]
 ## [[Connect]]
 ### [[TOK]] Meeting with [[Aadit]] at 7pm [[Aug 7th, 2020]]
-### [[Supriyo Uncle]] class [[Aug 8th, 2020]] at 7am
+### [[Supriyo Uncle]] class [[Aug 8th, 2020]] at 3pm
 ## [[Consume]]
 ## [[Cerebrate]]
 ## [[Coordinate]]
