Logseq auto save

--- a/pages/aug_8th,_2020.md
+++ b/pages/aug_8th,_2020.md
@@ -4,8 +4,19 @@ tags:
 ---
 
 ## 
-## Create
+## [[Create]]
 ### [[Extended Essay]] document
 #### TODO Something for lipid metabolism
+#### TODO Essay type something to do for [[Procedure]]
+#### Work on as many [[TODO]]
 ### [[TOK]] document
-###
+#### TODO PPD form completion
+#### Work on speech
+### TODO Math notes
+## [[Connect]]
+### TODO Conform [[CrashBoards x Waxdale Pitch]]
+## [[Consume]]
+### TODO Read for 30 minutes at 2x speed
+## [[Cerebrate]]
+## [[Coordinate]]
+## [[Consolidate]]
