Logseq auto save

--- a/pages/aug_8th,_2020.md
+++ b/pages/aug_8th,_2020.md
@@ -18,5 +18,6 @@ tags:
 ## [[Consume]]
 ### TODO Read for 30 minutes at 2x speed
 ## [[Cerebrate]]
+### [[multimorbidity]] in knowledge tree
 ## [[Coordinate]]
 ## [[Consolidate]]
