Logseq auto save

--- a/pages/aug_8th,_2020.md
+++ b/pages/aug_8th,_2020.md
@@ -13,6 +13,7 @@ tags:
 #### TODO PPD form completion
 #### Work on speech
 ### TODO Math notes
+### TODO [[Weekly review]]
 ## [[Connect]]
 ### TODO Conform [[CrashBoards x Waxdale Pitch]]
 ## [[Consume]]
