Logseq auto save

--- a/pages/aug_8th,_2020.md
+++ b/pages/aug_8th,_2020.md
@@ -11,14 +11,15 @@ tags:
 #### Work on as many [[TODO]]
 ### [[TOK]] document
 #### TODO PPD form completion
+#### TODO Review speech before meeting Aadit
 #### Work on speech
-### TODO Math notes
+### DONE Math notes
 ### TODO [[Weekly review]]
 ## [[Connect]]
 ### TODO Conform [[CrashBoards x Waxdale Pitch]]
 ## [[Consume]]
 ### TODO Read for 30 minutes at 2x speed
 ## [[Cerebrate]]
-### [[multimorbidity]] in knowledge tree
+### [[multimorbidity]] in knowledge tree. I had actually researched on it over the last few days, and then I made the evergreen note today.
 ## [[Coordinate]]
 ## [[Consolidate]]
