Logseq auto save

--- a/pages/aug_5th,_2020.md
+++ b/pages/aug_5th,_2020.md
@@ -1,6 +1,9 @@
----
-title: Aug 5th, 2020
-tags:
----
-
-## 
+## [[Crashboards International]] PITCH REVIEW
+### DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
+#### DONE Flesh out protocol in greater detail before  [[Srivalli Maam]] comes online
+#### DONE Difference between EE and IA [[Aug 7th, 2020]]
+### Stuff to-do
+### There has been consistent delays in her meeting. This is not really what I aimed for, but, there is nothing that I can actually do.
+### So basically nothing happened today. There was no meeting, and I have lost complete faith in this bloody company by the name of Waxdale Ecosystem. My team has scoured the internet, but these people seem to be newbies and people who need to respect some time.
+## [[Extended Essay]] call review with [[Srivalli Maam]]
+##
