--- a/pages/aug_6th,_2020.md
+++ b/pages/aug_6th,_2020.md
@@ -1,6 +1,16 @@
----
-title: Aug 6th, 2020
-tags:
----
-
-## 
+## ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
+## [[Morning Pages]]
+### There have been constant delays in the [[CrashBoards x Waxdale Pitch]]. Sometimes they are giving us excuses of "forgetting" followed by a very interesting "technical error", WOW! Give these guys a script, they are ment to be on stage.
+### There were two funny incidence that happened because of this. One involves [[Mom]] and the other involves [[Adithya]].
+### Mom said that "now you know how tough challenges come by". This statement was something that I realised that even [[Dad]] might be going through. Maybe the jab (x25) hook thing is not only applicable in the startup world but is something that is applicable to #life
+### [[Mom]] Also pointed out one more thing. I say "um" before every sentence.
+## [[Create]]
+### TODO Read some [[Book - Rich Dad Poor Dad]]
+### DONE Add [[Book - Dongri to Dubai]] into #TBR + [[Book Notes]] + fill out details
+### Did some work on the [[YouTube Dashboard]]
+### Read a really interesting piece: [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
+## [[Connect]]
+## [[Consume]]
+## [[Cerebrate]]
+### Review [[Extended Essay]]
+## [[Consolidate]]
