--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -138,29 +138,25 @@
 ### Till 7:45 - Housekeeping + setting up #logseq pages
 ### Till 8:00 - Figuring out who all to message
 ### 8:00 to 9:00 - Economics 14 + breakfa
-##
-##
-##
-## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy
-## [[Crashboards International]] Start-up Pitch Review
-### The fucking show didn't even happen. Those fucker who put some understanding up their arses din' t even show up; those motherfuckers.
-singly they did reply. I want to put in the entire email once it comes it from [[Adithya]] 
-## [[Create]]
-### DONE Finish leftover task
-### DONE Finalise the CrashBoards speech for [[Adithya]]
-### DONE Read [[The Handmaid's Tale]] + take down quotes as much as you can
+## [[Aug 4th, 2020]]
+### Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy
+### [[Crashboards International]] Start-up Pitch Review
+#### The fucking show didn't even happen. Those fucker who put some understanding up their arses din' t even show up; those motherfuckers.
+singly they did reply. I want to put in the entire email once it comes it from [[Adithya]]
+#
+### [[Create]]
+#### DONE Finish leftover task
+#### DONE Finalise the CrashBoards speech for [[Adithya]]
+#### DONE Read [[The Handmaid's Tale]] + take down quotes as much as you can
 
-### Worked on [[Chemistry IA]] and [[Biology IA]]
-## [[Connect]] 
-### DONE Fix time for pitch rehearsal meetin
-### [[Aug 5th, 2020]] 5pm IA meeting with [[Abhimanyu]]
-### Meeting with [[Srivalli Maam]] [[Aug 5th, 2020]]
-### Rescheduled [[Crashboards International]] pitch
-#### DONE Review pricing and number of courses
-##
-##
-##
-## [[Crashboards International]] PITCH REVIEW
+#### Worked on [[Chemistry IA]] and [[Biology IA]]
+### [[Connect]]
+#### DONE Fix time for pitch rehearsal meetin
+#### [[Aug 5th, 2020]] 5pm IA meeting with [[Abhimanyu]]
+#### Meeting with [[Srivalli Maam]] [[Aug 5th, 2020]]
+#### Rescheduled [[Crashboards International]] pitch
+##### DONE Review pricing and number of courses
+# [[Crashboards International]] PITCH REVIEW
 ## [[Extended Essay]] call review with [[Srivalli Maam]]
 ### So basically nothing happened today. There was no meeting, and I have lost complete faith in this bloody company by the name of Waxdale Ecosystem. My team has scoured the internet, but these people seem to be newbies and people who need to respect some time.
 ### There has been consistent delays in her meeting. This is not really what I aimed for, but, there is nothing that I can actually do.
@@ -168,10 +164,21 @@ singly they did reply. I want to put in the entire email once it comes it from [
 #### DONE Difference between EE and IA [[Aug 7th, 2020]]
 #### DONE Flesh out protocol in greater detail before  [[Srivalli Maam]] comes online
 ### DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
-##
-##
-##
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
+## [[Morning Pages]]
+### There have been constant delays in the [[CrashBoards x Waxdale Pitch]]. Sometimes they are giving us excuses of "forgetting" followed by a very interesting "technical error", WOW! Give these guys a script, they are ment to be on stage.
+### There were two funny incidence that happened because of this. One involves [[Mom]] and the other involves [[Adithya]].
+### Mom said that "now you know how tough challenges come by". This statement was something that I realised that even [[Dad]] might be going through. Maybe the jab (x25) hook thing is not only applicable in the startup world but is something that is applicable to #life
+### [[Mom]] Also pointed out one more thing. I say "um" before every sentence.
+## [[Create]]
+### TODO Read some [[Book - Rich Dad Poor Dad]]
+### DONE Add [[Book - Dongri to Dubai]] into #TBR + [[Book Notes]] + fill out details
+### Did some work on the [[YouTube Dashboard]]
+### Read a really interesting piece: [[ARTICLE - Loneliness, social isolation, cardiovascular disease and mortality]]
+## [[Connect]]
+## [[Consume]]
+## [[Cerebrate]]
+### Review [[Extended Essay]]
 ## [[Morning Pages]]
 ### There have been constant delays in the [[CrashBoards x Waxdale Pitch]]. Sometimes they are giving us excuses of "forgetting" followed by a very interesting "technical error", WOW! Give these guys a script, they are ment to be on stage.
 ### There were two funny incidence that happened because of this. One involves [[Mom]] and the other involves [[Adithya]].
